--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "format:check": "prettier \"**/*.{ts,tsx,js,json}\" --check && eslint --cache \"**/*.{ts,tsx,js,yml}\"",
         "format:staged": "lint-staged",
         "lint": "eslint --cache .",
-        "prepare": "git init && git config user.email <youremail> && git config user.name <yourname> && git add -A && git commit -m \"initial commit\" && husky || true",
+        "prepare": "git init && git config user.email billchaa@google.com  && git config user.name billchaa && git add -A && git commit -m \"initial commit\" && husky || true",
         "profiling": "cross-env NODE_ENV=production tsx --prof lib/index.ts",
         "start": "cross-env NODE_ENV=production tsx lib/index.ts",
         "test": "npm run format:check && npm run vitest:coverage",
